# natural

./: .gitmodules  CMakeLists.txt  Generate.bat
core/: CMakeLists.txt
core/source/: common.h  natural.h
core/source/application/: application.h  applicationDevices.cpp  applicationFabriques.cpp  applicationImpl.cpp  applicationImpl.h  applicationListener.cpp  applicationListener.h  applicationValidation.cpp
core/source/commandBuffer/: commandBuffer.h  commandBufferImpl.cpp  commandBufferImpl.h
core/source/commandPool/: commandPool.h  commandPoolImpl.cpp  commandPoolImpl.h
core/source/enums/: access.cpp  access.h  attachmentLoadStoreOp.cpp  attachmentLoadStoreOp.h  commandBuffer.cpp  commandBuffer.h  dependency.cpp  dependency.h  format.cpp  format.h  imageLayout.cpp  imageLayout.h  pipelineBindPoint.cpp  pipelineBindPoint.h  pipelineStage.cpp  pipelineStage.h
core/source/fence/: fence.h  fenceImpl.cpp  fenceImpl.h
core/source/framebuffer/: framebuffer.h  framebufferImpl.cpp  framebufferImpl.h
core/source/helpers/: helpers.cpp  helpers.h  impl.h  math3D.cpp  math3D.h  vulkanHelpers.cpp  vulkanHelpers.h
core/source/imageView/: imageView.h  imageViewImpl.cpp  imageViewImpl.h
core/source/object/: object.cpp  object.h
core/source/pipeline/: pipeline.h  pipelineImpl.cpp  pipelineImpl.h
core/source/renderPass/: renderPass.h  renderPassBuilder.h  renderPassBuilderImpl.cpp  renderPassBuilderImpl.h  renderPassDesc.cpp  renderPassDesc.h  renderPassImpl.cpp  renderPassImpl.h
core/source/resource/: resource.cpp  resource.h  resourceBuilderMap.cpp  resourceBuilderMap.h
core/source/resource/pipeline/: pipeline.h  pipelineImpl.cpp  pipelineImpl.h
core/source/resource/shader/: shader.h  shaderImpl.cpp  shaderImpl.h
core/source/semaphore/: semaphore.h  semaphoreImpl.cpp  semaphoreImpl.h
test/: CMakeLists.txt
test/resources/triangle/: triangle.json
test/source/: main.cpp
utils/: CMakeLists.txt
utils/source/: class.h  clock.cpp  clock.h  file.cpp  file.h  logging.cpp  logging.h  text.cpp  text.h  utils.h
