cmake_minimum_required(VERSION 3.9)
project(natural)
set(CMAKE_SUPPRESS_REGENERATION true)
set(CMAKE_CXX_STANDARD 17)
if (MSVC)
	add_compile_options("/MP")
	add_compile_options("/Y-")
endif (MSVC)
add_definitions(-D_USE_MATH_DEFINES -DGLM_ENABLE_EXPERIMENTAL -DGLM_FORCE_CTOR_INIT)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT test)

add_subdirectory(utils)
add_subdirectory(core)
add_subdirectory(test)